--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
   %body
-    %nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+    %nav.navbar.navbar-expand-lg.navbar-dark.bg-accent2
       .container
         = render 'nav_menu'
     - if content_for?(:page_header)
