--- a/app/views/application/_page_tabs.html.haml
+++ b/app/views/application/_page_tabs.html.haml
@@ -1,2 +1,2 @@
-.nav.nav-tabs.nav-tabs-responsive
+.nav.nav-pills.nav-tabs-responsive
   = render 'nav_items', items: page.tabs, li_class: 'nav-item', a_class: 'nav-link'
