--- a/app/views/competitions/certificates/templates/edit_text_fields.html.haml
+++ b/app/views/competitions/certificates/templates/edit_text_fields.html.haml
@@ -39,7 +39,7 @@
       -#           = tf.input :text
       -#           - box.footer do
       -#             = tf.primary_button :submit, 'Speichern'
-      - card.actions do
+      - card.footer do
         = f.primary_button :submit
         = f.cancel_button(competition_certificates_templates_path)
 
