--- a/app/views/home/_impressum_card.html.haml
+++ b/app/views/home/_impressum_card.html.haml
@@ -1,6 +1,6 @@
 .card
   .card-header
-    Kontakt
+    %h4.mb-0 Kontakt
   .card-body
     %p Besteht ein Bedürfnis, den Administrator und Entwickler dieser Seite zu kontaktieren, ist dies sehr wohl gewünscht. Für Anregungen oder Kritik bin ich immer offen. Falls es sich um einen Fehler in der Programmierung handelt, bitte ich darum, dass die URL der Seite kopiert wird und mit der E-Mail verschickt wird. So kann ich den Fehler schneller finden und auch beheben.
 
@@ -14,7 +14,7 @@
 
 .card.mt-4
   .card-header
-    Hinweise
+    %h4.mb-0 Hinweise
   .card-body
     %p Diese Webseite betreibe ich kostenlos als Privatperson. Sollte sich jemand durch die Verwendung der Daten in seinem Urheberrecht verletzt fühlen, bitte nicht sofort abmahnen, sondern eine E-Mail schreiben. Dies spart Zeit und Geld.
 
@@ -22,7 +22,7 @@
 
 .card.mt-4
   .card-header
-    Verantwortlichkeit
+    %h4.mb-0 Verantwortlichkeit
   .card-body
     Herr Georg Limbach
     %br
