--- a/app/assets/stylesheets/bootstrap/_variables.scss
+++ b/app/assets/stylesheets/bootstrap/_variables.scss
@@ -3,9 +3,9 @@
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
-$fs-red: #79031D;
-$fs-yellow: #EDB518;
-$fs-gray: #dcd4d7;
+$fs-red: #d16864;
+$fs-yellow: #ffd983;
+$fs-gray: #f1eeed;
 $fs-black: #000407;
 
 // Color system
@@ -303,16 +303,16 @@ $cyans: (
 // fusv-enable
 
 // scss-docs-start theme-color-variables
-$primary:       $fs-yellow !default;
+$primary:       $fs-red !default;
 $secondary:     #6e6967 !default;
 $success:       #1b974c !default;
-$info:          #6d919b !default;
+$info:          #c5d3e6 !default;
 $warning:       #e5c51e !default;
 $danger:        #993441 !default;
 $light:         lighten($fs-gray, 5%) !default;
 $dark:          #40485e !default;
-$accent1:       $fs-red;
-$accent2:       #6b0f23;
+$accent1:       darken($fs-red, 7.5%);
+$accent2:       hsl(10 20% 89% / 1);
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -345,7 +345,7 @@ $dark-text-emphasis:      $gray-700 !default;
 $primary-bg-subtle:       tint-color($primary, 80%) !default;
 $secondary-bg-subtle:     tint-color($secondary, 80%) !default;
 $success-bg-subtle:       tint-color($success, 80%) !default;
-$info-bg-subtle:          tint-color($info, 40%) !default;
+$info-bg-subtle:          tint-color($info, 10%) !default;
 $warning-bg-subtle:       tint-color($warning, 80%) !default;
 $danger-bg-subtle:        $danger !default;
 $light-bg-subtle:         mix($gray-100, $white) !default;
@@ -393,7 +393,7 @@ $enable-negative-margins:     false !default;
 $enable-deprecation-messages: true !default;
 $enable-important-utilities:  true !default;
 
-$enable-dark-mode:            true !default;
+$enable-dark-mode:            false !default;
 $color-mode-type:             data !default; // `data` or `media-query`
 
 // Prefix for :root CSS variables
@@ -448,10 +448,10 @@ $body-color:                $gray-900 !default;
 $body-bg:                   $fs-gray !default;
 
 $body-secondary-color:      rgba($body-color, .75) !default;
-$body-secondary-bg:         $gray-200 !default;
+$body-secondary-bg:         darken($fs-gray, 5%) !default;
 
 $body-tertiary-color:       rgba($body-color, .5) !default;
-$body-tertiary-bg:          $gray-100 !default;
+$body-tertiary-bg:          darken($fs-gray, 7.5%) !default;
 
 $body-emphasis-color:       $black !default;
 
@@ -553,9 +553,9 @@ $border-color-translucent:    rgba($black, .175) !default;
 // scss-docs-end border-variables
 
 // scss-docs-start border-radius-variables
-$border-radius:               .375rem !default;
-$border-radius-sm:            .25rem !default;
-$border-radius-lg:            .5rem !default;
+$border-radius:               .25rem !default;
+$border-radius-sm:            .20rem !default;
+$border-radius-lg:            .4rem !default;
 $border-radius-xl:            1rem !default;
 $border-radius-xxl:           2rem !default;
 $border-radius-pill:          50rem !default;
@@ -900,13 +900,13 @@ $input-padding-y-lg:                    $input-btn-padding-y-lg !default;
 $input-padding-x-lg:                    $input-btn-padding-x-lg !default;
 $input-font-size-lg:                    $input-btn-font-size-lg !default;
 
-$input-bg:                              var(--#{$prefix}body-bg) !default;
+$input-bg:                              $white !default;
 $input-disabled-color:                  null !default;
 $input-disabled-bg:                     var(--#{$prefix}secondary-bg) !default;
 $input-disabled-border-color:           null !default;
 
 $input-color:                           var(--#{$prefix}body-color) !default;
-$input-border-color:                    var(--#{$prefix}border-color) !default;
+$input-border-color:                    darken($fs-gray, 7.5%) !default;
 $input-border-width:                    $input-btn-border-width !default;
 $input-box-shadow:                      $box-shadow-inset !default;
 
@@ -1243,7 +1243,7 @@ $dropdown-padding-y:                .5rem !default;
 $dropdown-spacer:                   .125rem !default;
 $dropdown-font-size:                $font-size-base !default;
 $dropdown-color:                    var(--#{$prefix}body-color) !default;
-$dropdown-bg:                       var(--#{$prefix}body-bg) !default;
+$dropdown-bg:                       $white !default;
 $dropdown-border-color:             var(--#{$prefix}border-color-translucent) !default;
 $dropdown-border-radius:            var(--#{$prefix}border-radius) !default;
 $dropdown-border-width:             var(--#{$prefix}border-width) !default;
@@ -1353,7 +1353,7 @@ $card-box-shadow:                   null !default;
 $card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
 $card-cap-padding-y:                $card-spacer-y * .5 !default;
 $card-cap-padding-x:                $card-spacer-x !default;
-$card-cap-bg:                       lighten($light, 5%) !default;
+$card-cap-bg:                       lighten($fs-gray, 4%) !default;
 $card-cap-color:                    null !default;
 $card-height:                       null !default;
 $card-color:                        null !default;
