--- a/app/views/competitions/certificates/templates/_form.html.haml
+++ b/app/views/competitions/certificates/templates/_form.html.haml
@@ -3,6 +3,6 @@
   = f.input :image, as: :file, hint: ['Hintergrundbild zur Orientierung', @template.image_hint].compact_blank.join('; ')
   = f.input :font, as: :file, hint: ['Schriftart für variable Texte', @template.font_hint].compact_blank.join('; ')
   = f.input :font2, as: :file, hint: ['Zweite Schriftart für variable Texte', @template.font2_hint].compact_blank.join('; ')
-- card.actions do
+- card.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_certificates_templates_path)
