--- a/app/views/competitions/disciplines/_form.html.haml
+++ b/app/views/competitions/disciplines/_form.html.haml
@@ -4,6 +4,6 @@
   = f.input :short_name
   = f.input :single_discipline
   = f.input :like_fire_relay
-- card.actions do
+- card.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_disciplines_path)
