--- a/app/views/home/_info_card.html.haml
+++ b/app/views/home/_info_card.html.haml
@@ -1,4 +1,4 @@
-.card.text-bg-light
+.card.text-bg-accent2
   = image_tag 'ambiance/blurred-01.jpg', class: 'card-img-top'
   .card-header
     %h2 feusport.de
