--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,13 +1,69 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
-    </style>
-  </head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+   <head>
+      <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+      <meta content="width=device-width, initial-scale=1" name="viewport" />
+      <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+      <title><%= headers[:subject] %></title>
+      <style data-premailer="ignore" type="text/css">
+         body,table,td,a{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}table,td{mso-table-lspace:0pt;mso-table-rspace:0pt}img{-ms-interpolation-mode:bicubic}.hidden{display:none !important;visibility:hidden !important}a[x-apple-data-detectors]{color:inherit !important;text-decoration:none !important;font-size:inherit !important;font-family:inherit !important;font-weight:inherit !important;line-height:inherit !important}div[style*='margin: 16px 0']{margin:0 !important}@media only screen and (max-width: 639px){body,#body{min-width:320px !important}table.wrapper{width:100% !important;min-width:320px !important}table.wrapper td.wrapper-cell{border-left:0 !important;border-right:0 !important;border-radius:0 !important;padding-left:10px !important;padding-right:10px !important}}a{text-decoration:none;color:#4375b0 !important}a:hover{text-decoration:underline;}a.btn-link{color:#FFFFFF !important}
+      </style>
+      <style>body {
+         margin: 0 !important; background-color: #ffffff; padding: 0; text-align: center; min-width: 640px; width: 100%; height: 100%; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+         }
+      </style>
+   </head>
+   <body style="text-align: center; min-width: 640px; width: 100%; height: 100%; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; margin: 0; padding: 0;" bgcolor="#ffffff">
+      <table border="0" cellpadding="0" cellspacing="0" id="body" style="text-align: center; min-width: 640px; width: 100%; margin: 0; padding: 0;" bgcolor="#ffffff">
+         <tbody>
+            <tr class="line">
+               <td style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; height: 4px; font-size: 4px; line-height: 4px;" bgcolor="#ffffff"></td>
+            </tr>
+            <tr class="header">
+               <td style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 1.6; color: #5c5c5c; padding: 25px 0; font-size: 18px; text-align: left;" align="left">
 
-  <body>
-    <%= yield %>
-  </body>
+               </td>
+            </tr>
+            <tr>
+               <td style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;">
+                  <table border="0" cellpadding="0" cellspacing="0" class="wrapper" style="width: 640px; border-collapse: separate; border-spacing: 0; margin: 0 auto; background-color: #fff;" bgcolor="#fff">
+                     <tbody>
+                        <tr>
+                           <td class="wrapper-cell" style="overflow: hidden; padding: 18px 25px;" align="left" bgcolor="#fff">
+                              <img src="asdf" style="height: 50px; width: 307px; margin: 0; border: 0;" width="307" height="50">
+                           </td>
+                        </tr>
+                        <tr>
+                           <td style="overflow: hidden; padding: 0; height: 3px;" align="left" bgcolor="#6894c8" height="3">
+                           </td>
+                        </tr>
+                        <tr>
+                           <td class="wrapper-cell" style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; overflow: hidden; padding: 25px 25px;" align="left" bgcolor="#fff">
+                              <%= yield %>
+                           </td>
+                        </tr>
+                     </tbody>
+                  </table>
+               </td>
+            </tr>
+            <tr class="footer">
+               <td style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 1.6; color: #5c5c5c; padding: 25px 0;">
+                  <div>
+                    <p style="color: #5c5c5c;">
+                     <%= link_to("feusport.de", root_url, style: 'color: #4375b0 !important;font-weight: bold;') %>
+                     <br/>
+                     feusport.de - Verwaltung von Feuerwehrsportwettkämpfen
+                     <br/>
+                     Ein kostenloser Dienst von und für Feuerwehrsportler!
+                    </p>
+                  </div>
+               </td>
+            </tr>
+            <tr>
+               <td class="footer-message" style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 1.6; color: #5c5c5c; padding: 25px 0;">
+               </td>
+            </tr>
+         </tbody>
+      </table>
+   </body>
 </html>
