--- a/app/views/application/_page_header.html.haml
+++ b/app/views/application/_page_header.html.haml
@@ -1,3 +1,5 @@
 %h1= page.title
 - if page.sub_title.present?
   %p.lead.m-0.ms-1= page.sub_title
+- if page.sub_title2.present?
+  %p.lead.m-0.ms-1= page.sub_title2
