--- a/app/views/competition_nested/edit.html.haml
+++ b/app/views/competition_nested/edit.html.haml
@@ -1,4 +1,4 @@
-- page_title "#{resource_class.model_name.human} aktualisieren"
+= render 'competitions/header', competition: @competition, sub: "#{resource_class.model_name.human} aktualisieren"
 
 .row
   .col-md-8
