--- a/app/views/application/_nav_items.haml
+++ b/app/views/application/_nav_items.haml
@@ -1,10 +1,10 @@
 - items.each do |item|
   - if item.dropdown?
-    %div.dropdown{ class: li_class }
+    .dropdown{ class: li_class }
       %a.nav-link.dropdown-toggle#navbar-dropdown-menu-link{ href: '#', role: 'button', 'data-bs-toggle' => 'dropdown', 'aria-expanded' => 'false' }
         = item.label
       %ul.dropdown-menu{ 'aria-labelledby' => 'navbar-dropdown-menu-link' }
         = render 'nav_items', items: item.dropdown.items, li_class: nil, a_class: 'dropdown-item'
   - else
     %div{ class: [li_class] + [item.active ? 'active' : nil] }
-      = render 'nav_link', link: item, a_class: a_class
+      = render('nav_link', link: item, a_class:)
