--- a/app/views/competition_nested/index.html.haml
+++ b/app/views/competition_nested/index.html.haml
@@ -1,16 +1,23 @@
-= render 'competitions/header', competition: @competition
+= render 'competitions/header', competition: @competition, sub: resource_class.model_name.human(count: :many)
 
-.row
+.row.g-4
   .col-md-8
-    = card(resource_class.model_name.human(count: :many)) do |card|
-      - if resource_collection.exists?
-        - card.direct do
+    = card do |card|
+      = card.title resource_class.model_name.human(count: :many)
+
+      - card.body do
+        - if resource_collection.exists?
           = render('index_table', resource_class:, resource_collection:)
-      - else
-        - card.body do
+        - else
           .alert.alert-info= t('a.no_entries_found')
 
-      - card.footer do
-        = btn_link_to(t('a.add'), action: :new)
+      - if can?(:create, resource_class.new(competition: @competition))
+        = card.primary_actions do |actions|
+          = actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
+
+      = card.actions do |actions|
+        = actions.link_to 'als PDF', { format: :pdf }, target: '_blank', rel: 'noopener'
+        = actions.link_to 'als XLS', format: :xlsx
+
     = render('index_bottom', resource_class:, resource_collection:)
   .col-md-4= render('index_right', resource_class:, resource_collection:)
