--- a/app/views/competitions/bands/new.html.haml
+++ b/app/views/competitions/bands/new.html.haml
@@ -1,9 +1,9 @@
-- page_title "#{resource_class.model_name.human} hinzufügen"
+= render 'competitions/header', competition: @competition, sub: "#{resource_class.model_name.human} hinzufügen"
 
-%h3 Aus Vorlage
 .row.mb-3
   .col-md-6
-    = card('Erwachsene') do |card|
+    = card do |card|
+      - card.title 'Erwachsene aus Vorlage'
       - card.body do
         .row
           .col-md-4.text-center
@@ -25,8 +25,9 @@
               .d-grid
                 = f.submit 'Erwachsene', class: 'btn btn-light'
             %em.small Geschlechtsunabhängig
-  .col-md-6
-    = card('Jugend') do |card|
+
+    = card do |card|
+      - card.title 'Jugend aus Vorlage'
       - card.body do
         .row
           .col-md-4.text-center
@@ -48,8 +49,7 @@
               .d-grid
                 = f.submit 'Jugend', class: 'btn btn-light'
             %em.small Geschlechtsunabhängig
-.row
-  .col-md-8
+  .col-md-6
     = simple_form_for([:competition, resource_instance]) do |f|
       = card "#{resource_class.model_name.human} hinzufügen" do |card|
         = render('form', f:, card:)
