--- a/app/views/competitions/bands/show.html.haml
+++ b/app/views/competitions/bands/show.html.haml
@@ -1,8 +1,9 @@
-= page_title "#{Band.model_name.human}: #{@band.name}"
+= render 'competitions/header', competition: @competition, sub: "#{Band.model_name.human}: #{@band.name}"
 
 .row
   .col-md-8
-    = card(@band.name, class: 'mb-3') do |card|
+    = card(class: 'mb-3') do |card|
+      - card.title @band.name
       - card.direct do
         %table.table
           %tr
@@ -21,7 +22,8 @@
               - else
                 &dash;
 
-    = card(Assessment.model_name.human(count: :many)) do |card|
+    = card do |card|
+      - card.title Assessment.model_name.human(count: :many)
       - if @band.assessments.exists?
         - card.direct do
           %table.table
@@ -30,20 +32,21 @@
               %th= Assessment.human_attribute_name(:discipline)
             - @band.assessments.each do |assessment|
               %tr
-                %td= link_to assessment, assessment
+                %td= link_to assessment.name, competition_assessment_path(id: assessment.id)
                 %td
-                  = discipline_image assessment.discipline
-                  = assessment.discipline
+                  = discipline_image assessment.discipline.key
+                  = assessment.name
       - else
         - card.body do
           .alert.alert-info= t('a.no_entries_found')
 
   .col-md-4
-    = card(t('a.actions')) do |card|
+    = card do |card|
+      - card.title t('a.actions')
+      = card.primary_actions do |actions|
+        = actions.link_to 'Übersicht', { action: :index }, end_icon: :list
       - card.body do
         .d-grid.gap-2
-          = btn_link_to 'Übersicht', { action: :index }
-          %hr
           = btn_link_to 'Bearbeiten', { action: :edit }
           - if @band.destroy_possible?
             = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Wertungsgruppe wirklich löschen?' }
