--- a/app/views/competitions/bands/new.html.haml
+++ b/app/views/competitions/bands/new.html.haml
@@ -2,8 +2,7 @@
 
 .row.mb-3
   .col-md-6
-    = card do |card|
-      - card.title 'Erwachsene aus Vorlage'
+    = card('Erwachsene aus Vorlage') do |card|
       - card.body do
         .row
           .col-md-4.text-center
@@ -26,8 +25,7 @@
                 = f.submit 'Erwachsene', class: 'btn btn-light'
             %em.small Geschlechtsunabhängig
 
-    = card do |card|
-      - card.title 'Jugend aus Vorlage'
+    = card('Jugend aus Vorlage') do |card|
       - card.body do
         .row
           .col-md-4.text-center
