--- a/app/views/competitions/disciplines/_index_right.html.haml
+++ b/app/views/competitions/disciplines/_index_right.html.haml
@@ -1,5 +1,4 @@
-= card do |card|
-  - card.title 'Vorlage hinzufügen'
+= card('Vorlage hinzufügen') do |card|
   - card.body do
     .d-grid.gap-2
       - Discipline::DISCIPLINES.each do |key|
