Weitere Views auf Theme umstellen

--- a/app/assets/stylesheets/_certificates.sass
+++ b/app/assets/stylesheets/_certificates.sass
@@ -6,12 +6,15 @@
   vertical-align: top
   position: relative
 
+  margin-left: 2rem
+  margin-top: 2rem
+
   background-repeat: no-repeat
   background-size: 100% 100%
 
-// #certificates-template-preview
-//   width: 100%
-//   height: 500px
+#certificates-template-preview
+  width: 100%
+  height: 500px
 
 .text-element
   display: inline-block
