--- a/app/views/competition_nested/edit.html.haml
+++ b/app/views/competition_nested/edit.html.haml
@@ -5,3 +5,5 @@
     = simple_form_for(resource_instance, url: url_for(controller: controller_path, action: :update)) do |f|
       = card "#{resource_class.model_name.human} aktualisieren" do |card|
         = render('form', f:, card:)
+  .col-md-4
+    = render('edit_right')
