--- a/app/views/competitions/assessments/_form.html.haml
+++ b/app/views/competitions/assessments/_form.html.haml
@@ -4,4 +4,4 @@
   = f.input :forced_name
 - card.footer do
   = f.primary_button :submit
-  = f.cancel_button(competition_bands_path)
+  = f.cancel_button(competition_assessments_path)
