--- a/app/views/competitions/certificates/templates/show.html.haml
+++ b/app/views/competitions/certificates/templates/show.html.haml
@@ -52,5 +52,6 @@
           = btn_link_to 'Löschen', { action: :destroy }, method: :delete, data: { confirm: 'Vorlage wirklich löschen?' }
 .row
   .col-md-6.mt-3
-    = card('Vorschau') do
-      %iframe#certificates-template-preview{ src: url_for(format: :pdf) }
+    = card('Vorschau') do |card|
+      - card.body do
+        %iframe#certificates-template-preview{ src: url_for(format: :pdf) }
