--- a/app/views/competitions/visibilities/edit.html.haml
+++ b/app/views/competitions/visibilities/edit.html.haml
@@ -1,14 +1,12 @@
-= page_title 'Sichtbarkeitseinstellungen'
+= render 'competitions/header', competition: @competition, resource_class: nil, sub: "Wettkampf aktualisieren"
 
 .row
   .col-md-8
     = simple_form_for(@competition, url: competition_visibility_path) do |f|
-      .card
-        .card-body
-          = f.error_notification
-
-          .form-inputs
-            = f.input :visible, autofocus: true
-            = f.input :slug
-          .btn-toolbar.mt-3
-            = f.button :submit, 'Bearbeiten', class: 'btn btn-primary'
+      = card "Wettkampf aktualisieren" do |card|
+        - card.body do
+          = f.input :visible, autofocus: true
+          = f.input :slug
+        - card.footer do
+          = f.primary_button :submit
+          = f.cancel_button(competition_show_path)
