--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -225,3 +225,9 @@
 
   [type=radio]:checked + label
     outline: 0.2rem solid $primary
+
+
+.assessment-request
+  border: 1px solid $light
+  margin: 0.4rem
+  padding: 0.4rem
