--- a/app/views/competitions/bands/_form.html.haml
+++ b/app/views/competitions/bands/_form.html.haml
@@ -1,7 +1,8 @@
 - card.body do
   = f.input :gender, collection: Band::GENDER_KEYS, as: :radio_buttons, label_method: ->(b) { t("gender.#{b}") }
   = f.input :name
-  = f.input :tag_names
+  = f.input :person_tag_names
+  = f.input :team_tag_names
 - card.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_bands_path)
