Viele Verbesserungen und Übernahmen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -231,3 +231,9 @@
   border: 1px solid $light
   margin: 0.4rem
   padding: 0.4rem
+
+.tiny
+  font-size: 71%
+
+.next-run
+  border-bottom: 2px solid black
