--- a/app/views/competitions/documents/_form.html.haml
+++ b/app/views/competitions/documents/_form.html.haml
@@ -2,5 +2,5 @@
   = f.input :title
   = f.input :file, hint: 'Wenn du eine neue Datei angibst, wird die vorhandene Datei ersetzt.'
 - card.footer do
-  = f.primary_button :submit, "Hochladen"
+  = f.primary_button :submit, 'Hochladen'
   = f.cancel_button(competition_show_path)
