--- a/app/views/competitions/teams/show.html.haml
+++ b/app/views/competitions/teams/show.html.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-md-8
-    = card("Mannschaft: #{@team.numbered_name}", class: "mb-3") do |card|
+    = card("Mannschaft: #{@team.numbered_name}", class: 'mb-3') do |card|
       - card.direct do
         %table.table.table-condensed
           %tr
@@ -59,7 +59,7 @@
       - card.body do
         .d-grid.gap-2
           = btn_link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team)
-          = btn_link_to 'Name bearbeiten', {action: :edit}
+          = btn_link_to 'Name bearbeiten', { action: :edit }
           = btn_link_to 'Löschen', { action: :destroy }, method: :delete, data: { confirm: 'Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!' }
 
   -# - if admin_logged_in? || @team.object.people.exists?
