--- a/app/views/competitions/score/lists/show.html.haml
+++ b/app/views/competitions/score/lists/show.html.haml
@@ -22,7 +22,7 @@
                         - if track == 1 && params[:destroy_index].nil?
                           = short_edit_link edit_competition_score_list_run_path(list_id: @list.id, run:), title: 'Zeiten bearbeiten', class: 'btn-xs'
                         - if entry.present? && params[:destroy_index]
-                          = short_destroy_link destroy_entity_score_list_path(@list, entry_id: entry.id), title: 'Aus Liste entfernen', class: 'btn-xs', remote: true
+                          = short_destroy_link destroy_entity_competition_score_list_path(id: @list, entry_id: entry.id), title: 'Aus Liste entfernen', class: 'btn-xs'
         - card.actions do |actions|
           = actions.link_to 'als PDF', { format: :pdf }, target: '_blank', rel: 'noopener'
           = actions.link_to 'als XLS', format: :xlsx
